--- a/src/main/resources/static/css/circle.css
+++ b/src/main/resources/static/css/circle.css
@@ -182,13 +182,22 @@ button {
 .panel1 {
 	width: 800px;
 	height: 750px;
+	overflow-x:hidden;
 	background-color: #F0F0F0;
 	margin: 0 auto;
 	border: solid #BBBBBB 1px;
 }
+.backIndex{
+	top: 70px;
+	left: 100px;
+	color: #F9F0DA;
+	font-size: 30px;
+	text-decoration: none;
+	margin-right: 7px;
+}
 /*按钮样式*/
 .panel1 button{
-	width: 70px;
+	width: 100px;
 	height: 30px;
 }
 /*按钮点击后效果*/
@@ -215,6 +224,11 @@ button {
 	position: relative;
 	left: 50px;
 	top: 20px;
+}
+#card1{
+	position: relative;
+	left: 550px;
+    top: 20px;
 }
 /*分隔符*/
 .hr1{
@@ -299,6 +313,11 @@ button {
 	left: 30px;
 	margin: 5px;
 }
+.pColor1{
+	position: relative;
+	left: 30px;
+	margin: 5px;
+}
 /*全部评论*/
 #allComment{
 	position: relative;
@@ -347,10 +366,27 @@ button {
 /*帖子面板*/
 .panel2 {
 	width: 800px;
-	height: 450px;
+	height: 750px;
 	background-color: #F0F0F0;
 	margin: 0 auto;
 	border: solid #BBBBBB 1px;
+	overflow-x:hidden;
+	margin-top:30px;
+}
+/*具体内容框框*/
+#all{
+	width: 800px;
+	margin: 0 auto;
+	position: relative;
+	top: 50px;
+}
+/*目录框框*/
+#my{
+	display: none;
+	width: 800px;
+	margin: 0 auto;
+	position: relative;
+	top: 50px;
 }
 /*按钮样式*/
 .panel2 button{
