--- a/src/main/resources/templates/student/circleComment.html
+++ b/src/main/resources/templates/student/circleComment.html
@@ -1,43 +1,86 @@
 <!DOCTYPE html>
 <html>
+<script src="/js/jquery-1.9.1.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.isotope.min.js"></script>
+<script src="/js/jquery.inview.min.js"></script>
+<script src="/js/cookie3.js"></script>
+<script>
+        var topicID=getCookie("topicID");
+		window.onload=function(){
+		getTopicInfo(topicID);
+		str="";
+		if(getCookie("identification")==1)
+		{str2="我的课程";}
+		else if(getCookie("identification")==3)
+		{str2="我的学校";}
+		else
+		{str2="我的学习";}
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /> <a href=\"/student/index\"><img class=\"head\" src=\"/img/字体设计.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
+        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
+        $("#header").html(str);
+    }
+    function exituser()
+    {
+     delCookie("name");
+     delCookie("userID");
+     delCookie("sex");
+     delCookie("schoolID");
+     delCookie("identification");
+     window.location.href="/student/login";
+    }
+     function joinStudy()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/myStudy";}
+   }
+      function joinMessage()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/message";}
+   }
+	</script>
+<script>
+	function getTopicInfo(id)
+	{
+ $("#heading").html("#"+getCookie("heading"));
+  $("#content").html("     "+getCookie("content"));
+   $("#name").html("帖主： "+getCookie("topic_name"));
+	}
+</script>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/circle.css" />
+		<link rel="stylesheet" href="/css/circle.css" />
 		<title>帖子详情</title>
 	</head>
 	<body>
 	<div class="container">
 		<!--顶部标题栏-->
-		<div class="header">
-			<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
-		     <a  href="myStudy.html" class="nav1">我的学习</a>
-		        <a href="message.html" class="nav2">消息</a>
-		        <a href="login.html" class="nav3">登录/注册</a>
-            <img id="icon" src="img/头像.png" /> 
-            
-		</div>
-		<!--学校背景图-->
-		<div class="schoolBg">
-			
-		</div>
-		<!--学校校徽-->
-		<img class="schoolBedge" src="img/Badge 5.png"/>
-		<!--学校简介-->
-		<div class="schoolIntro">
-			<p>这里是学校简介巴拉不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不</p>
+		<div class="header" id="header">
 		</div>
 		<!--分隔符-->
 		<div class="hr">
 		     	
 		</div>
 		<!--帖子面板-->
-		<div class="panel1">
-			<p class="pColor">#帖子名称</p>
+		<div class="panel2" id="panel2">
+			<p class="pColor" id="heading"></p>
+			<p class="pColor1" id="content"></p>
+			<p class="pColor1" id="name"></p>
 			<button type="button" id="allComment" autofocus="autofocus">全部评论</button>
 			<button type="button" id="myComment">我的评论</button>
-			<button type="button" id="Comment">评论</button>
+			<button type="button" id="Comment">发表评论</button>
+
 			<!--第一篇帖子-->
+			<div id="all">
 			<hr class="hr1" />
 			<div class="box1">
 				<div class="circle">
@@ -49,67 +92,35 @@
 				<div class="date1">
 					<p>2018-03-29</p>
 				</div>
-				<a href="circleToComment.html"><img src="img/消息.png" class="img21"></a>
+				<a href="circleToComment.html"><img src="/img/消息.png" class="img21"></a>
 				<div class="num1">
 					<p>2938人</p>
 				</div>
 			</div>
-			<!--第二篇帖子-->
-			<hr class="hr1" />
-			<div class="box1">
-				<div class="circle">
-				   <p class="circleNum">2</p>
-				</div>
-				<div class="cicleContent">
-					<p>帖子内容</p>
-				</div>
-				<div class="date1">
-					<p>2018-03-29</p>
-				</div>
-				<a href="circleToComment.html"><img src="img/消息.png" class="img21"></a>
-				<div class="num1">
-					<p>2938人</p>
-				</div>
 			</div>
-			<!--第三篇帖子-->
-			<hr class="hr1" />
-			<div class="box1">
-				<div class="circle">
-				   <p class="circleNum">3</p>
-				</div>
-				<div class="cicleContent">
-					<p>帖子内容</p>
-				</div>
-				<div class="date1">
-					<p>2018-03-29</p>
-				</div>
-				<a href="circleToComment.html"><img src="img/消息.png" class="img21"></a>
-				<div class="num1">
-					<p>2938人</p>
-				</div>
-			</div>
-			<!--第四篇帖子-->
-			<hr class="hr1" />
-			<div class="box1">
-				<div class="circle">
-				   <p class="circleNum">4</p>
-				</div>
-				<div class="cicleContent">
-					<p>帖子内容</p>
-				</div>
-				<div class="date1">
-					<p>2018-03-29</p>
-				</div>
-				<a href="circleToComment.html"><img src="img/消息.png" class="img21"></a>
-				<div class="num1">
-					<p>2938人</p>
+			<div id="my">
+				<hr class="hr1" />
+				<div class="box1">
+					<div class="circle">
+						<p class="circleNum">1</p>
+					</div>
+					<div class="cicleContent">
+						<p>帖子内容</p>
+					</div>
+					<div class="date1">
+						<p>2018-03-29</p>
+					</div>
+					<a href="circleToComment.html"><img src="/img/消息.png" class="img21"></a>
+					<div class="num1">
+						<p>29人</p>
+					</div>
 				</div>
 			</div>
 		</div>
 		<!--页脚-->
 	    <div class="footer">
-	    	<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
+	    	<img class="img-logo" src="/img/logo.png" />
+			<img class="head" src="/img/字体设计.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
@@ -121,5 +132,17 @@
                 window.location.assign('http://127.0.0.1:8020/%E4%BA%91%E6%99%BA%E6%95%99%E8%82%B2/circleToComment.html');
             }
 		</script>
+	<script>
+		var btn1 = document.getElementById("allComment");
+        btn1.onclick =function(){
+            document.getElementById('my').style.display='none';
+            document.getElementById('all').style.display='block';
+        }
+        var btn2=document.getElementById("myComment");
+        btn2.onclick=function(){
+        	document.getElementById('all').style.display='none';
+        	document.getElementById('my').style.display='block';
+        }
+</script>
 	</body>
 </html>
