--- a/src/main/resources/templates/student/classContentTrue.html
+++ b/src/main/resources/templates/student/classContentTrue.html
@@ -10,7 +10,6 @@
         var courseID=getCookie("courseID");
 		window.onload=function(){
 		getCourseInfo(courseID);
-		getTopic(courseID);
 		str="";
 		if(getCookie("identification")==1)
 		{str2="我的课程";}
@@ -22,7 +21,6 @@
 		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
         else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
         $("#header").html(str);
-        alert("这是预览课程界面，请到自己学校主页下进行选课！");
     }
     function exituser()
     {
@@ -37,48 +35,7 @@
 <script>
 	function getCourseInfo(id)
 	{
-$.ajax({
-        type:"GET", //请求方式
-        url: "/course/"+id+"?user_id="+getCookie("userID") ,
-        cache: false,   //如果使用缓存
-        contentType : "application/json",
-        dataType: 'json',   //返回值类型
-        success:function(data){
-         $("#title").html(data.course.name);
-         $("#num").html("课程人数： "+data.num);
-         $("#author").html("讲师： "+getCookie("teacher_name"));
-         $("#introduction").html("课程简介： "+data.course.introduction);
-        document.getElementById("picture").src=data.course.picture;
-        str=" ";
-        str=str+"<p>"+">>>>教学进度：  "+data.course.teaching_progress+"</p>";
-        str=str+"<p>"+"."+"</p>";
-        str=str+"<p>"+".."+"</p>";
-        str=str+"<p>"+"..."+"</p>";
-        str=str+"<p>"+"...."+"</p>";
-        str=str+"<p>"+">>>>知识点简介：  "+data.course.knowledge_point+"</p>";
-        $("#content").html(str);
-        }
-        });
-	}
-</script>
-<script>
-	function getTopic(id)
-	{
-$.ajax({
-        type:"GET", //请求方式
-        url: "/topic1/1/"+id ,
-        cache: false,   //如果使用缓存
-        contentType : "application/json",
-        dataType: 'json',   //返回值类型
-        success:function(data){
-        str="";
-        str=str+"<img src=\"/img/帖子.png\" class=\"img1\" /><button type=\"button\" id=\"card\" onclick=\"putTopic()\">发帖</button>";
-         $.each(data,function(i,item){
-        str=str+"<hr class=\"hr1\" /><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
-			                          });
-	     $("#view").html(str);
-        }
-        });
+
 	}
 </script>
 <script>
@@ -99,26 +56,6 @@ $.ajax({
    window.location.href="/student/message";}
    }
 	</script>
-<script>
-	function putTopic()
-	{
-	alert("未加入课程，不能进行操作！");
-	}
-	function goTopic(id,heading,content,name)
-	{
-	setCookie("is_operate","no");
-	setCookie("topicID",id);
-	setCookie("heading",heading);
-	setCookie("content",content);
-	setCookie("topic_name",name);
-	setCookie("type",1);
-	window.location.href="/student/circleComment";
-	}
-	function goComment()
-	{
-	alert("未加入课程，不能进行操作！");
-	}
-</script>
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="/css/classContent.css" />
@@ -132,14 +69,16 @@ $.ajax({
 	    <!--课程概述-->
 	    <div class="classPic">
 	        <!--课程封面图片-->
-	    	<img class="Picture" id="picture"/>
+	    	<img src="/img/classPic.png" class="Picture"/>
 	    	<!--课程相关介绍-->
 	    	<div class="classIntroduction">
-	    		<p class="title" id="title"></p>
-	    		<p class="author" id="author"></p>
-				<p class="author" id="num"></p>
-	    		<p class="author" id="introduction"></p>
+	    		<p class="title" id="title">里是课程标题</p>
+	    		<p class="author" id="author">讲师：某某某</p>
+	    		<p class="introduction" id="introduction">这里是课程简介巴拉巴拉巴拉巴拉巴拉可以写一堆，和下面介绍不同的地方是这个是总的课程介绍</p>
 	    		<!--立即加入按钮-->
+	    		<div class="join" id="join">
+	    		    <button type="submit">立即加入</button>
+	    		</div>
 	    	</div>
 	    	<!--导航栏-->
             <div class="classNavigation">
@@ -153,16 +92,26 @@ $.ajax({
 	    <!--课程详情-->
 	    <div class="secondBox">
 	    	<div id="content">
+	    		<p>这里是正文部分</p>
 	    	</div>
 	    	<div id="menu">
 	    		<p>目录</p>
 	    		<span class="menuContent">这是预览课程界面，不能加载目录</span>
 	    	</div>
-			<!--帖子面板-->
-			<div class="panel1" id="view">
-				<!--第一篇帖子-->
+	    	<div id="view">
+	    		<p>评价详情</p>
+	    		<div class="box1">
+				<div class="circle">
+				   <p class="circleNum">1</p>
+				</div>
+				<div class="cicleContent">
+					<p>帖子内容</p>
+				</div>
+				<div class="date1">
+					<p>2018-03-29</p>
+				</div>
 			</div>
-
+	    	</div>
 	    </div>
 	    <!--页脚-->
 	    <div class="footer">
