--- a/src/main/resources/templates/student/classDetails.html
+++ b/src/main/resources/templates/student/classDetails.html
@@ -2,19 +2,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>课程详情</title>
 	</head>
 	<body>
 <div class="container">
 		<!--顶部标题栏-->
 		<div class="header">
-			<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
+			<img class="img-logo" src="/img/logo.png" />
+			<img class="head" src="/img/字体设计.png" />
 		        <a  href="myStudy.html" class="nav1">我的学习</a>
 		        <a href="message.html" class="nav2">消息</a>
 		        <a href="login.html" class="nav3">登录/注册</a>
-            <img id="icon" src="img/头像.png" />     
+            <img id="icon" src="/img/头像.png" />
 		</div>
 	    <!--面板-->
 	    <div class="classPanel">
@@ -52,8 +52,8 @@
 	    </div>
 	    <!--页脚-->
 	    <div class="footer">
-	    	<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
+	    	<img class="img-logo" src="/img/logo.png" />
+			<img class="head" src="/img/字体设计.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
