--- a/src/main/resources/static/css/classContent.css
+++ b/src/main/resources/static/css/classContent.css
@@ -128,7 +128,7 @@ button {
 	position: relative;
 	top: 70px;
 	left: 100px;
-	color: #F9F0DA;
+	color: #8B4513;
 	font-size: 30px;
 	text-decoration: none;
 	margin-right: 7px;
