--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -901,10 +901,12 @@ button {
 	margin: 0 auto;
 }
 #classViewPanel1{
-	width:900px;
-    height:420px;
-    overflow-x:hidden;
-    margin:0 auto;
+	width:1300px;
+     height:350px;
+     overflow-x:hidden;
+     margin:0 auto;
+     margin-top:100px;
+     margin-bottom:100px;
 }
 
 /*我的消息*************************
