--- a/src/main/resources/templates/student/alumniCircle.html
+++ b/src/main/resources/templates/student/alumniCircle.html
@@ -80,8 +80,9 @@ $.ajax({
         str="";
         str=str+"<img src=\"/img/帖子.png\" class=\"img1\" /><button type=\"button\" id=\"card\" onclick=\"putTopic()\">发帖</button><button type=\"button\" id=\"card1\" onclick=\"goBack()\">返回上一页</button>";
          $.each(data,function(i,item){
-        str=str+"<hr class=\"hr1\" /><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"人"+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
+        str=str+"<hr class=\"hr1\"><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.topic_id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"人"+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
 			                          });
+		str=str+"<hr class=\"hr1\">";
 	     $("#view").html(str);
         }
         });
@@ -96,7 +97,7 @@ $.ajax({
 	{
 	if(schoolID==getCookie("schoolID"))
 	  {
-	  setCookie("type",2);
+	  setCookie("type",0);
 	  window.location.href="/student/circleToPut";}
 	else
 	alert("不是该学校成员，不能进行操作！");
@@ -104,9 +105,9 @@ $.ajax({
 	function goTopic(id,heading,content,name)
 	{
 	if(schoolID==getCookie("schoolID"))
-	setCookie("is_operate","yes");
+	setCookie("is_operate",1);
 	else
-	setCookie("is_operate","no");
+	setCookie("is_operate",0);
 	setCookie("topicID",id);
 	setCookie("heading",heading);
 	setCookie("content",content);
