--- a/src/main/resources/templates/student/circleToPut.html
+++ b/src/main/resources/templates/student/circleToPut.html
@@ -1,50 +1,131 @@
 <!DOCTYPE html>
+<script src="/js/jquery-1.9.1.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.isotope.min.js"></script>
+<script src="/js/jquery.inview.min.js"></script>
+<script src="/js/cookie3.js"></script>
+<script>
+		window.onload=function(){
+		str="";
+		if(getCookie("identification")==1)
+		{str2="我的课程";}
+		else if(getCookie("identification")==3)
+		{str2="我的学校";}
+		else
+		{str2="我的学习";}
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /> <a href=\"/student/index\"><img class=\"head\" src=\"/img/字体设计.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
+        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
+        $("#header").html(str);
+    }
+    function exituser()
+    {
+     delCookie("name");
+     delCookie("userID");
+     delCookie("sex");
+     delCookie("schoolID");
+     delCookie("identification");
+     window.location.href="/student/login";
+    }
+     function joinStudy()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/myStudy";}
+   }
+      function joinMessage()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/message";}
+   }
+	</script>
+<script>
+	function put()
+	{
+	var mydate=new Date();
+	var belonging_id;
+	if(getCookie("type")==0)
+	belonging_id=getCookie("schoolID");
+	else if(getCookie("type")==1)
+	belonging_id=getCookie("courseID");
+	else if(getCookie("type")==2)
+	belonging_id=getCookie("trainingID");
+	var bind={
+    "belonging_id":belonging_id,
+    "time":mydate,
+    "type":getCookie("type"),
+    "user_id":getCookie("userID"),
+    "heading":$('#name').val(),
+     "content":$('#content').val()
+    }
+$.ajax({
+        type:"POST", //请求方式
+        url: "/topic/"+getCookie("type")+"/type/"+belonging_id,
+        contentType :"application/json",
+        data:JSON.stringify(bind),
+        dataType: 'json',   //返回值类型
+         success:function(data){
+         alert("发帖成功！正在返回");
+         if(getCookie("type")==0)
+         window.location.href="/student/alumniCircle";
+         else if(getCookie("type")==1)
+	         window.location.href="/student/classContentTrue";
+	     else if(getCookie("type")==2)
+	      window.location.href="/student/mytraining";
+         },
+          error:function(data){
+          alert(111);
+         }
+         });
+	}
+	function goback()
+	{
+	 alert("正在返回o~");
+      if(getCookie("type")==0)
+      window.location.href="/student/alumniCircle";
+       else if(getCookie("type")==1)
+	        window.location.href="/student/classContentTrue";
+	  else if(getCookie("type")==2)
+	      window.location.href="/student/mytraining";
+	}
+</script>
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/circle.css" />
+		<link rel="stylesheet" href="/css/circle.css" />
 		<title>评论</title>
 	</head>
 	<body>
 <div class="container">
 		<!--顶部标题栏-->
-		<div class="header">
-			<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
-		     <a  href="myStudy.html" class="nav1">我的学习</a>
-		        <a href="message.html" class="nav2">消息</a>
-		        <a href="login.html" class="nav3">登录/注册</a>
-            <img id="icon" src="img/头像.png" /> 
-		</div>
-		<!--学校背景图-->
-		<div class="schoolBg">
-			
-		</div>
-		<!--学校校徽-->
-		<img class="schoolBedge" src="img/Badge 5.png"/>
-		<!--学校简介-->
-		<div class="schoolIntro">
-			<p>这里是学校简介巴拉不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不不</p>
+		<div class="header" id="header">
 		</div>
 		<!--分隔符-->
 		<div class="hr"></div>
 		<!--帖子面板-->
 		<div class="panel2">
-			<img src="img/头像1.png" class="commentImg" />
-			<p class="userName">名称</p>
+			<img src="/img/头像1.png" class="commentImg" />
+			<p class="userName">发帖吧，上一行是标题，下一行是帖子内容哦~</p>
 			<div class="mycommentBox">
-				<button type="button" id="Toput">发表</button>
+				<button type="button" id="Toput" onclick="put()">发表</button>
+				<button type="button" id="Toput1" onclick="goback()">返回</button>
 				<!--帖子名称-->
-				<input type="text" class="putTitle"></input>
+				<input type="text" class="putTitle" id="name"></input>
 				<!--帖子内容-->
-			    <textarea rows="5" cols="10" class="putcommentBox"></textarea>
+			    <textarea rows="5" cols="10" class="putcommentBox" id="content"></textarea>
 		    </div>
 			
 		</div>
 		<!--页脚-->
 	    <div class="footer">
-	    	<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
+	    	<img class="img-logo" src="/img/logo.png" />
+			<img class="head" src="/img/字体设计.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
