--- a/src/main/resources/templates/student/classContent.html
+++ b/src/main/resources/templates/student/classContent.html
@@ -74,8 +74,9 @@ $.ajax({
         str="";
         str=str+"<img src=\"/img/帖子.png\" class=\"img1\" /><button type=\"button\" id=\"card\" onclick=\"putTopic()\">发帖</button>";
          $.each(data,function(i,item){
-        str=str+"<hr class=\"hr1\" /><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
+        str=str+"<hr class=\"hr1\"><div class=\"box1\"><div class=\"circle\"><p class=\"circleNum\">"+item.no+"</p></div><a onclick=\"goTopic("+item.topic_id+",'"+item.heading+"','"+item.content+"','"+item.name+"')\" class=\"cicleTitle\">"+item.heading+"</a><div class=\"cicleContent\"><p>"+item.content+"</p></div><div class=\"date\"><p>"+item.time+"</p></div><a onclick=\"goComment()\"><img src=\"/img/消息.png\" class=\"img2\"></a><div class=\"num\"><p>"+item.comment_num+"</p></div><div class=\"num1\"><p>帖子发起人:"+item.name+"</p></div></div>";
 			                          });
+		str=str+"<hr class=\"hr1\">";
 	     $("#view").html(str);
         }
         });
@@ -106,7 +107,7 @@ $.ajax({
 	}
 	function goTopic(id,heading,content,name)
 	{
-	setCookie("is_operate","no");
+	setCookie("is_operate",0);
 	setCookie("topicID",id);
 	setCookie("heading",heading);
 	setCookie("content",content);
@@ -118,6 +119,15 @@ $.ajax({
 	{
 	alert("未加入课程，不能进行操作！");
 	}
+	function goBack()
+	{
+	if(getCookie("path")==1)
+	window.location.href="/student/index";
+	if(getCookie("path")==2)
+	window.location.href="/student/schoolIndex";
+	if(getCookie("path")==3)
+	window.location.href="/student/teacher";
+	}
 </script>
 	<head>
 		<meta charset="UTF-8">
@@ -128,7 +138,7 @@ $.ajax({
 		<!--顶部标题栏-->
 		<div id="header" class="header">
 		</div>
-	    <a href="/student/index" class="backIndex">返回首页</a>
+	    <a onclick="goBack()" class="backIndex">返回上一页</a>
 	    <!--课程概述-->
 	    <div class="classPic">
 	        <!--课程封面图片-->
